--- a/module_common/src/main/res/values/themes.xml
+++ b/module_common/src/main/res/values/themes.xml
@@ -13,4 +13,16 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <!--标题栏的背景色 -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <!--状态栏的背景色 -->
+        <item name="colorPrimaryDark">@color/teal_700</item>
+        <!--控件效果的背景色 -->
+        <item name="colorAccent">@color/colorAccent</item>
+
+
+    </style>
 </resources>
