实现了权限申请、广播、通知等功能，详见README

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <include layout="@layout/activity_base"></include>
+    <include layout="@layout/activity_base" />
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
