--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -8,7 +8,7 @@
     tools:context=".MineFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="我的页面"
