进一步模拟趣约会推荐页

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <include layout="@layout/activity_base" />
+    <include layout="@layout/activity_base"
+        android:id="@+id/base_toolbar"
+        />
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
