--- a/app/src/main/res/layout/item_recommend_userinfo.xml
+++ b/app/src/main/res/layout/item_recommend_userinfo.xml
@@ -2,20 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_avatar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_width="102dp"
+        android:layout_height="102dp"
+        android:layout_margin="@dimen/dp_10"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.187"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.043"
+        app:layout_constraintVertical_bias="0.5"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
@@ -23,14 +25,14 @@
         android:layout_width="0dp"
         android:layout_height="28dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="40dp"
+        android:gravity="center"
+        android:text="龙曦"
         android:textColor="@color/black"
         android:textSize="@dimen/text_18sp"
-        android:gravity="center"
-        android:layout_marginTop="40dp"
-        android:text="龙曦"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toEndOf="@+id/iv_avatar"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,13 +40,13 @@
         android:id="@+id/tv_age"
         android:layout_width="73dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="18岁"
+        android:layout_marginBottom="@dimen/dp_10"
         android:textColor="@color/black"
         android:textSize="@dimen/text_16sp"
-        app:layout_constraintStart_toStartOf="@+id/tv_nickname"
-        app:layout_constraintTop_toBottomOf="@+id/tv_nickname" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tv_nickname" />
 
     <TextView
         android:id="@+id/tv_workcitystr"
