继续实现分页加载

--- a/app/src/main/res/navigation/main_page_navigation.xml
+++ b/app/src/main/res/navigation/main_page_navigation.xml
@@ -12,7 +12,7 @@
         tools:layout="@layout/fragment_message" />
     <fragment
         android:id="@+id/recommendationFragment"
-        android:name="com.qyh_practice.module_recommend.RecommendFragment"
+        android:name="com.qyh_practice.module_recommend.Recommend2Fragment"
         android:label="recommendationFragment" />
     <fragment
         android:id="@+id/blindDateFragment"
