--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="text_18sp">18sp</dimen>
+    <dimen name="sp_18">18sp</dimen>
     <dimen name="dp_10">10dp</dimen>
-    <dimen name="dimen_70">70dp</dimen>
+    <dimen name="dp_70">70dp</dimen>
 </resources>
