--- a/module_common/src/main/res/layout/activity_base.xml
+++ b/module_common/src/main/res/layout/activity_base.xml
@@ -47,7 +47,7 @@
         android:layout_marginRight="177dp"
         android:layout_marginBottom="21dp"
         android:text="仿趣约会"
-        android:textSize="@dimen/text_18sp"
+        android:textSize="@dimen/sp_18"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="@+id/toolbar"
