--- a/module_common/src/main/res/values/dimens.xml
+++ b/module_common/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="text_18sp">18sp</dimen>
-    <dimen name="text_16sp">16sp</dimen>
-    <dimen name="text_14sp">14sp</dimen>
+    <dimen name="sp_18">18sp</dimen>
+    <dimen name="sp_16">16sp</dimen>
+    <dimen name="sp_14">14sp</dimen>
 </resources>
