--- a/module_login/src/main/res/layout/activity_login.xml
+++ b/module_login/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
         android:layout_marginTop="32dp"
         android:gravity="center"
         android:text="@string/string_phone"
-        android:textSize="@dimen/text_18sp"
+        android:textSize="@dimen/sp_18"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,16 +47,16 @@
 
     <EditText
         android:id="@+id/ed_phone"
-        android:layout_width="313dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
+
         android:ems="10"
         android:hint="@string/string_login_hint"
-        android:text="88842244451"
         android:inputType="phone"
         android:maxLength="11"
+        android:text="88842244451"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.169"
         app:layout_constraintStart_toEndOf="@+id/tv_phone"
         app:layout_constraintTop_toTopOf="@+id/tv_phone"
         tools:text="88842244451" />
@@ -68,7 +68,7 @@
         android:layout_marginTop="44dp"
         android:gravity="center"
         android:text="@string/string_verifycode"
-        android:textSize="@dimen/text_18sp"
+        android:textSize="@dimen/sp_18"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
