--- a/module_login/src/main/res/layout/activity_splash.xml
+++ b/module_login/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="@string/string_welcome"
         android:textColor="@color/black"
-        android:textSize="@dimen/text_18sp"
+        android:textSize="@dimen/sp_18"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
