--- a/app/src/main/res/layout/fragment_trend.xml
+++ b/app/src/main/res/layout/fragment_trend.xml
@@ -4,16 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".trendFragment">
+    >
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="动态页面"
+    <com.example.module_common.ui.ZhenAiCircle
+        android:id="@+id/MyCircle"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:diffusionCircleColor="@color/purple_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3"
+        app:smallCircleColor="@color/purple_500"
+        app:smallCircleRadius="@dimen/dp_20"
+        app:startDiffuse="true"
+        app:startScan="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
