--- a/module_recommend/src/main/res/layout/fragment_recommend2.xml
+++ b/module_recommend/src/main/res/layout/fragment_recommend2.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".Recommend2Fragment">
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:background="@color/white"
@@ -34,21 +35,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_collapseMode="none"
-
                 />
 
             <FrameLayout
-
+                android:id="@+id/frame_layout_title"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_10"
+                android:layout_height="@dimen/dp_70"
+                android:clickable="true"
+                android:focusable="true"
                 app:layout_collapseMode="pin">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:id="@+id/tv_title"
                     android:background="@drawable/ic_funnydate_white" />
+
+                <View
+                    android:id="@+id/v_title_underline"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/px_1"
+                    android:layout_gravity="bottom"
+                    android:visibility="gone"
+                    android:background="@color/color_70_cccccc"/>
 
 
             </FrameLayout>
@@ -75,9 +85,7 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             tools:listitem="@layout/item_recommend_userinfo"
-
 
             />
 
