--- a/module_recommend/src/main/res/values/dimens.xml
+++ b/module_recommend/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_70">70dp</dimen>
     <dimen name="dp_11">11dp</dimen>
+    <dimen name="px_1">1px</dimen>
 </resources>
